# rust-project-test

./: .gitignore  Cargo.toml  FAQ.html  README.md  configuration.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  docs.yml  release.yml  tests_and_code_coverage.yml
app/: .gitignore  Cargo.toml  tauri.conf.json
app-broadcast/: .gitignore
app-broadcast/src-tauri/: Cargo.toml
app-broadcast/src-tauri/src/: main.rs
app-lifecycle/: Cargo.toml  Makefile.toml  NOTES.md  README.md  impersonation.txt  package-lock.json  package.json
app-lifecycle/ipc-client-test/: Cargo.toml
app-lifecycle/ipc-client-test/src/: background.rs  capture.rs  main.rs
app-lifecycle/ipc-server/: Cargo.toml  app.manifest  build.rs
app-lifecycle/ipc-server/src/: args.rs  client.rs  lib.rs  logger.rs  main.rs  pcap.rs  security.rs  server.rs  types.rs  utils.rs  windivert.rs
app-lifecycle/shell-exec-test/: Cargo.toml
app-lifecycle/shell-exec-test/src/: api.rs  main.rs
app-lifecycle/src/: app.css  app.html
app-lifecycle/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app-lifecycle/src-tauri/src/: assets.rs  background.rs  context.rs  emitter.rs  handlers.rs  lib.rs  main.rs  models.rs  setup.rs  updater.rs
app-lifecycle/src/lib/: store.ts
app-lifecycle/src/routes/: +layout.svelte  +page.svelte
app-lifecycle/tcp-client-server/: Cargo.toml
app-lifecycle/tcp-client-server/src/: app.rs  args.rs  client.rs  main.rs  server.rs  simulation.rs
app/src/: abstractions.rs  background_worker.rs  lib.rs  setup_app.rs  updater.rs
app/src/handlers/: add_record.rs  get_records.rs  mod.rs  test_utils.rs
better-sql-migrator/: Makefile.toml
better-sql-migrator/src-tauri/: Cargo.toml  tauri.windows.conf.json
better-sql-migrator/src-tauri/src/: main.rs
better-sql-migrator/src/routes/: +layout.svelte
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md  guide.md
guide/: chapter_1.html  chapter_2.html  chapter_3.html
json-deserialize-perf/: Cargo.toml  Makefile.toml  README.md
json-deserialize-perf/benches/: benchmark.rs
json-deserialize-perf/src/: deser_alloc_buff_in_one_go.rs  deser_reader.rs  deser_reader_simd.rs  deser_simd_alloc_buff_in_one_go.rs  lib.rs  models.rs
lib/: Cargo.toml
lib/src/: lib.rs  utils.rs
refinery-vs-custom/: Cargo.toml
refinery-vs-custom/migrations_tweaks/: V1__initial.sql
refinery-vs-custom/src/: main.rs
web/: package-lock.json  package.json  tsconfig.json  tsconfig.spec.json  vite.config.ts
web-component/: package-lock.json  package.json  rollup.config.js  tsconfig.json  vitest.config.js
web-component/src/: Button.svelte  View.svelte  View.test.ts  index.ts
web-core/: package-lock.json  package.json
web-fake/: .gitignore  package-lock.json  package.json  tsconfig.json  tsup.config.ts
web-fake/src/: handlers.ts
web-lib/: package-lock.json  package.json
web-lib/src/: handlers.ts  index.ts  types.ts
web/src/: api.ts
web/src/routes/: +layout.svelte  +page.svelte  layout.svelte.test.ts  page.svelte.test.ts
