[package]
name = "json-deserialize-perf"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
simd-json = "0.15.1"
hashbrown = { version = "0.15.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
serde_with = "3.12.0"
bitflags = "2.4.1"
log = "0.4.18"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false