[package]
name = "ipc-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

[lib]
name = "ipc_server_lib"
path = "src/lib.rs"

[[bin]]
name = "ipc_server"
path = "src/main.rs"

[features]
# default = []
# default = ["windivert"]
# default = ["pcap"]
windivert = ["dep:windivert", "dep:windivert-sys"]
pcap = ["dep:pcap"]

[dependencies]
interprocess = { version = "2.2.3", features = [] }
pcap = { version = "2.3.0", optional = true }
windivert = { version = "=0.7.0-beta.1", optional = true }
windivert-sys = { version = "0.11.0-beta.1", optional = true }
etherparse = "0.19.0"
anyhow = "1.0.75"
log = "0.4.18"
flexi_logger = "0.30.1"
single-instance = "0.3.3"
clap = { version = "4.5.31", features = ["derive"] }
blake3 = "1.8.2"
thiserror = "2.0.16"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Security"] }
winapi = { version = "0.3.0", features = ["winuser", "libloaderapi", "sysinfoapi", "iphlpapi", "processthreadsapi", "shellapi", "errhandlingapi", "minwinbase", "securitybaseapi"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"