[package]
name = "shell-exec-test"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

[dependencies]
anyhow = "1.0.75"
winapi = { version = "0.3.0", features = ["winuser", "libloaderapi", "sysinfoapi", "processthreadsapi", "shellapi", "errhandlingapi", "minwinbase", "securitybaseapi"] }
log = "0.4.18"
flexi_logger = "0.30.1"
windows-sys = { version = "0.52.0", features = ["Win32_Security"] }
sysinfo = "0.30"