[package]
name = "app-lifecycle"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"
rust-version = "1.89.0"

[lib]
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lifycycle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-opener = "2"
anyhow = "1.0.75"
thiserror = "2.0.16"
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.4", features = ["image-png", "tray-icon"] }
bitflags = "2.4.1"
window-vibrancy = "0.6"
hashbrown = { version = "0.15.0", features = ["serde"] }
r2d2_sqlite = "0.31.0"
r2d2 = "0.8.10"
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
tokio = { version = "1.45.1", features = ["rt", "macros"] }
serde_with = "3.12.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
log = "0.4.18"
flexi_logger = { version = "0.30.2", default-features = false }
reqwest = { version = "0.12", features = ["json", "gzip"] }
uuid = { version = "1.17.0", features = ["v4"] }
moka = { version = "0.12.7", features = ["sync"] }
rsntp = { version = "4.0.0", default-features = false, features = ["chrono"]  }
flate2 = "1.0.30"
sysinfo = "0.35.1"
strum = "0.27"
strum_macros = "0.27"
async-trait = "0.1.89"
rand = "0.9.2"
ipc-server = { path = "../ipc-server", features = ["windivert"] }
interprocess = "2.2.3"
byteorder = { version = "1.5.0" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-opener = "2.4.0"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
