[package]
name = "tcp-client-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

[dependencies]
anyhow = "1.0.75"
log = "0.4.18"
flexi_logger = "0.30.1"
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread", "net", "io-util", "time"] }
rand = { version = "0.9.2" }
bincode = { version = "2.0.1", features = ["alloc"] }
clap = { version = "4.5.31", features = ["derive"] }
single-instance = "0.3.3"